--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "license": "MIT",
-  "version": "0.4.18",
+  "version": "0.4.19-beta.0",
   "scripts": {
     "clean": "rm -rf build",
     "build-examples": "yarn run clean && webpack",
